plugins {
    id 'java'
    id 'com.diffplug.spotless' version '6.20.0'
}

repositories {
    mavenCentral()
}

group "com.scottlogic.hackathon"
version "1.0-SNAPSHOT"

wrapper {
    gradleVersion = "8.2.1"
    distributionType = Wrapper.DistributionType.ALL
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

spotless {
  format 'misc', {
    target '*.gradle', '*.md', '.gitignore'

    trimTrailingWhitespace()
    indentWithSpaces()
    endWithNewline()
  }
  java {
    target '*/**/java/**/*.java'
    targetExclude '*/node_modules/**'
    formatAnnotations()

    removeUnusedImports()

    importOrder(
      'java|javax|com|lombok|',
      'com.scottlogic',
      '\\#',
    )
  }
  yaml {
    target '.circleci/config.yml'
    jackson()
      .yamlFeature('MINIMIZE_QUOTES', true)
  }
}

subprojects {
    pluginManager.withPlugin('java') {

        java {
            toolchain {
                languageVersion = JavaLanguageVersion.of(17)
            }
        }

        ext {
            slf4jVersion = '1.7.12'
        }

        repositories {
            jcenter()
        }

        dependencies {
            compileOnly 'org.projectlombok:lombok:1.18.30'
            annotationProcessor 'org.projectlombok:lombok:1.18.30'
        }
    }
}
